# Tino-Robot

./: .gitignore  README.md  The Revenge of the Mazes(1-10).csv  VR_SKELETON_MODIFICATIONS.md  analyze_evaluation_data.py  build_workspace.sh  depth_calibration_helper.py  kill_tino_tmux.sh  localization_analysis.py  run_rtabmap.sh  setup_arduino_symlinks.sh  setup_audio.sh  start_tino_with_rtab.sh  start_tino_with_rtab_no_gamepad.sh  test_skeleton_generator.py  test_skeleton_udp_receiver.py  test_vr_udp_client.py  udp_receiver.py  upload_debug_base_wasd.sh  upload_head.sh  upload_leg.sh  upload_legacy_leg.sh  upload_new_base.sh
.github/: copilot-instructions.md
Thesis TinoV2/: Thesis.tex  Thesis_bibliography.bib
Thesis TinoV2/Chapters/: Control_implementation.tex  Hardware_implementation.tex  Integration_implementation.tex  Perception_implementation.tex  Software_implementation.tex  background.tex  chapter1_introduction.tex  chapter2_technology_research.tex  chapter3_system_architecture.tex  chapter4_slam_sensor_fusion.tex  chapter5_hardware_redesign.tex  chapter6_human_detection.tex  chapter7_vr_integration.tex  chapter8_evaluation_conclusions.tex  conceptual_work.tex  conclusions.tex  evaluation.tex  implementation.tex  introduction.tex  temporalRD.tex
Tino-raspberrypi/: launcher.sh  main.py  restart.sh
Tino-raspberrypi/classes/: Controller_base.py  Controller_base_and_leg.py  Controller_base_and_leg_head_control_head.py  joysticki.py
Tino-raspberrypi/controller/: Controller_camera_working.py  Controller_camera_working_2.py
Tino-raspberrypi/stream/: Stream.py
base_tino/: RaspberryCommunication.cpp
debug_base_wasd/: debug_base_wasd.ino
head_OL_tino_base/: head_OL_tino_base.ino
leg_tino/: RaspberryCommunication.cpp  RaspberryCommunication.h  leg_tino.ino
legacy_tino/Tino-raspberrypi/: README.md  main_camera.py
legacy_tino/Tino-raspberrypi/classes/: Controller_base_and_leg_head.py  Controller_head.py  Controller_head_command_base.py  Controller_head_swing.py  Controller_leg.py
legacy_tino/Tino-raspberrypi/controller/: Controller_camera.py  Controller_leg.py
legacy_tino/Tino-raspberrypi/utils/: constants.py
legacy_tino/base_tino/: RaspberryCommunication.h  base_tino.ino  pinout.h
legacy_tino/head_OL_tino_base/: RaspberryCommunication.h
new_base_tino/: RaspberryCommunication.cpp  RaspberryCommunication.h  new_base_tino.ino  pinout.h
new_head_tino/: RaspberryCommunication.cpp  new_head_tino.ino
new_leg_tino/: RaspberryCommunication.cpp  new_leg_tino.ino
tino_ws/src/tino_ros/: package.xml  setup.cfg  setup.py
tino_ws/src/tino_ros/doc/: vr_recorder_usage.md
tino_ws/src/tino_ros/docs/: vr_data_recording.md
tino_ws/src/tino_ros/launch/: audio_test.launch.py  legacy_tino_robot.launch.py  pose_detection.launch.py  rtab_localization.launch.py  rtab_localization_headless.launch.py  rtab_mapping.launch.py  rtab_mapping_headless.launch.py  rtab_visualization.launch.py  tino_robot.launch.py  tino_robot_gamepad.launch.py  vr_recorder.launch.py
tino_ws/src/tino_ros/tino_ros/: audio_loopback.py  audio_node.py  audio_test_node.py  export_model.py  gamepad_node.py  hardware_interface_node.py  pose_detection_node.py  robot_controller_node.py  vr_data_extractor.py  vr_data_recorder_node.py  vr_interface_node.py
tino_ws/src/uwb_positioning/: CMakeLists.txt  package.xml
tino_ws/src/uwb_positioning/launch/: uwb.launch.py
tino_ws/src/uwb_positioning/scripts/: dwm1001_apiCommands.py  dwm1001_systemDefinitions.py  main.py
