<!-- """
===================================================================
|                                                                 |
|  COPYRIGHT NOTICE                                               |
|                                                                 |
|  This code is developed by OpenIoT - Open Platforms and         |
|  Enabling Technologies for the Internet of Things.              |
|                                                                 |
|  Developer: Farhad Shamsfakhr, PhD                              |
|  Affiliation: Fondazione Bruno Kessler (FBK)                    |
|  Address: via Sommarive, 18 38123 Povo, Trento (Italy)          |
|                                                                 |
|  This project is sponsored by the Agri-Food project,            |
|  coordinated by FONDAZIONE BRUNO KESSLER.                       |
|  Funded under the Digital Europe Programme (DIGITAL).           |
|                                                                 |
|  © [2024] Farhad Shamsfakhr, PhD. All rights reserved.          |
|                                                                 |
===================================================================
""" -->
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwb_positioning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fshamsfakhr@gmail.com">Farhad Shamsfakhr</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/gazebo_ros_control</url>

  <author>Farhad Shamsfakhr</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
